--- a/base_view_child_target_current/views/ir.ui.view.xml
+++ b/base_view_child_target_current/views/ir.ui.view.xml
@@ -6,7 +6,7 @@
         <field name="inherit_id" ref="base.view_view_form" />
         <field name="arch" type="xml">
             <field name="inherit_children_ids" position="replace">
-                <button name="action_create_inherited_view" string="Create Inherited View" type="object"/>
+                <button name="action_add_child_view" string="Create Inherited View" type="object"/>
                 <field name="inherit_children_ids" context="{'default_model':model,'default_type':type,'default_inherit_id':active_id,'default_mode':'extension', 'active_test': False}">
                     <tree default_order="priority,id" decoration-muted="not active">
                         <field name="active" invisible="1"/>
@@ -14,7 +14,7 @@
                         <field name="priority"/>
                         <field name="name"/>
                         <field name="xml_id"/>
-                        <button name="action_open_inherited_view" type="object" string="Open" class="float-right btn-secondary"/>
+                        <button name="action_open_child_view" type="object" string="Open" class="float-right btn-secondary"/>
                     </tree>
                 </field>
             </field>
